<resources>
    <string name="txt_nombre_aplicacion">Servicios Asu</string>
    <string name="txt_cargando">Cargando, &#8230;</string>
    <string name="txt_muni_asu">Municipalidad de Asunción</string>
    <string name="txt_desarrollado_por">Desarrollado por:</string>
    <string name="txt_direccion_gral">Dirección Gral. de Planificación y Sistemas</string>
    <string name="txt_direccion_info">Dirección de Informática y Organización</string>
    <string name="txt_departamento_sis">Departamento de Sistemas</string>
    <string name="txt_unidad_desa">Un. de Desarrollo y Mantenimiento de Sistemas</string>
    <string name="txt_desarrollador" translatable="false">Ing. Vicente Insfán C.</string>
    <string name="txt_copyright" translatable="false">© 2016</string>
    <string name="txt_recaudaciones" translatable="false">Expedientes Recaudaciones</string>
    <string name="txt_consulta_expediente" translatable="false">Consulta Expedientes</string>
    <string name="txt_reclamos_en_linea" translatable="false">Reclamos en linea</string>
    <string name="txt_nro_expediente" translatable="false">Número de Expediente</string>
    <string name="txt_anio" translatable="false">Año:</string>
    <string name="txt_nro_documento" translatable="false">Número de Documento</string>
    <string name="txt_tipo_documento" translatable="false">Tipo de Docuemto</string>
    <string name="txt_buscar" translatable="false">Buscar</string>
    <string name="txt_buscar_nro_doc" translatable="false">Buscar por Número de Documento</string>
    <string name="txt_buscar_nro_exp" translatable="false">Buscar por Número de Expediente</string>
    <string name="txt_volver" translatable="false">Volver</string>
    <string name="txt_menu_exp" translatable="false">Menú de Expedientes</string>
    <string name="txt_lista_per" translatable="false">Lista de Personas</string>
    <string name="txt_lista_exp" translatable="false">Lista de Expedientes</string>
    <string name="txt_lista_mov" translatable="false">Lista de Movimientos</string>
    <string name="txt_no_disponible">No disponible</string>
    <string name="txt_dependencia">Dependencia</string>
    <string name="txt_expe_anio">N° Exp. / Año</string>
    <string name="txt_movimiento">Movimiento</string>
    <string name="txt_descripcion">Descripción</string>
    <string name="txt_fecha">Fecha</string>
    <string name="txt_ubi_actual">Ubic. actual</string>
    <string name="txt_fecha_ultimo_mov">Fec. ultimo mov.</string>
    <string name="txt_exp_anio">N° Exp. / Año:</string>
    <string name="txt_nro_doc">Nro. Documento:</string>
    <string name="txt_recurrente">Recurrente:</string>
    <string name="txt_des_exp">Des. Exp.:</string>
    <string name="txt_estado">Estado:</string>
    <string name="txt_resultado_busqueda">Resultado de la busqueda</string>
    <string name="txt_mov_exp" translatable="false">Movimientos del Expediente</string>
    <string name="txt_seleccione_expediente" translatable="false">Seleccione un expediente</string>

    <string name="txt_atencion">Atención</string>
    <string name="txt_aceptar">Aceptar</string>
    <string name="txt_cancelar">Cancelar</string>
    <string name="txt_titulo_alerta_conectividad_error">Error de conectividad</string>
    <string name="txt_no_existe_expediente">No existe expediente</string>
    <string name="txt_no_tiene_expedientes">No tiene expedientes</string>
    <string name="txt_titulo_alerta_json_exception">JSONException</string>
    <string name="txt_enviar_correo">Enviar por correo</string>
    <string name="txt_correo_enviado">Correo enviado</string>
    <string name="txt_email">Email</string>
    <string name="txt_mensaje_alerta_campo_vacio">Debe completar el campo</string>
    <string name="txt_mensaje_enviando_correo">Enviando correo, &#8230;</string>

    <string name="txt_mensaje_alerta_campos_vacios">Los campos no pueden estar vacios</string>
    <string name="action_settings">Settings</string>
</resources>
