<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="py.gov.mca.serviasuncion.MenuExpedientesActivity"
    tools:showIn="@layout/activity_buscar_exp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#FFF"
        android:elevation="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <EditText
                    android:id="@+id/et_nro_exp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_nro_expediente"
                    android:inputType="textCapCharacters" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <EditText
                    android:id="@+id/et_anio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_anio"
                    android:inputType="textCapCharacters" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|right"
            android:layout_margin="16dp">

            <ImageButton
                android:id="@+id/image_button_buscar_nro_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search_orange_24dp"
                android:background="@color/white"/>

            <TextView
                android:id="@+id/text_view_buscar_nro_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_buscar"
                android:textColor="@color/accent"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
