<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="py.gov.mca.serviasuncion.ListaExpedientesActivity"
    tools:showIn="@layout/activity_lista_expedientes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#FFF"
        android:elevation="20dp"
        android:orientation="vertical">

        <LinearLayout
            style="@style/Theme.TitulosConBordeRedondeoArriba"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtMensaje"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_seleccione_expediente"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:id="@+id/vw_divider"
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@color/colorDivider" />

        <LinearLayout
            style="@style/Theme.TitulosSinBordeRedondeoArriba"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_expe_anio"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/txt_descripcion"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <!--TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_ubi_actual"
                android:textColor="@color/white"
                android:textSize="12sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_fecha_ultimo_mov"
                android:textColor="@color/white"
                android:textSize="12sp" /-->

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_fragment_container_expedientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
