<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="py.gov.mca.serviasuncion.MenuExpedientesActivity"
    tools:showIn="@layout/activity_buscar_doc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#FFF"
        android:elevation="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/edit_text_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_nro_documento"
                    android:inputType="textCapCharacters" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/txt_tipo_documento"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/spinner_tipo_documento"
                    style="@android:style/Widget.Holo.Light.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:paddingTop="0dp"
                    android:prompt="@string/txt_tipo_documento"
                    android:spinnerMode="dialog" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|right"
            android:layout_margin="16dp">

            <ImageButton
                android:id="@+id/image_button_buscar_nro_doc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search_orange_24dp"
                android:background="@color/white"/>

            <TextView
                android:id="@+id/text_view_buscar_nro_doc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_buscar"
                android:textColor="@color/accent"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
